make background to work with a php file

--- a/megaPlayListXXX.web/player.background.html
+++ b/megaPlayListXXX.web/player.background.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="http://megaplayer.com/megaplaylistxxx.web/scripts/modules/mediaplayer/jwplayer.js"></script>	
+		<script src="scripts/modules/mediaplayer/jwplayer.js"></script>	
 		<script data-main="scripts/mainBackground" src="scripts/require.js"></script>	
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		
 	</head>
 	<body>
 
